--- a/src/main/metadata/classes/VehiclePickerController.cls
+++ b/src/main/metadata/classes/VehiclePickerController.cls
@@ -22,6 +22,18 @@ global with sharing class VehiclePickerController {
     Map<String, Set<String>> classModelMap {get;set;}
     
     public List<Vehicle_Relationship__c> leadVehicleRelationships;
+    
+	public static user usr{
+		get
+		{
+			if (usr == null)
+			{
+				usr = [select id,Market__c from User where id=:userinfo.getuserId()];
+			}
+			return usr;
+		}
+		private set;
+	}
 
     /**
     *@Description : This method fetches all the vehicles that are associated with the Lead to pre-populate the values.
@@ -34,6 +46,7 @@ global with sharing class VehiclePickerController {
     Public string profileName;
     Public boolean disableButtons{get;set;}
     public VehiclePickerController(ApexPages.StandardController controller) {
+        
         //profileName = userinfo.getprofilename();
         profile p = [select Name from profile where id =:userinfo.getprofileId()];
         disableButtons = true;
@@ -56,7 +69,7 @@ global with sharing class VehiclePickerController {
         try{
         
             /***************** QUERY THE VEHICLES ASSOCIATED WITH THE LEAD : START *******************/
-            lead_Vehicles = [Select Lead_Type__c, Interested_Vehicle__c, Interested_Competitor_Vehicle__c, Current_Vehicle_1__c, CAC_Lead_Status__c ,Dealer_Lead_Status__c ,Lead_Desired_Service__c,Current_Vehicle_2__c,Trade_In_Vehicle__c, Purchased_Vehicle__c From Lead__c Where Id =: currentRecordId];
+            lead_Vehicles = [Select Lead_Type__c, Interested_Vehicle__c, Interested_Competitor_Vehicle__c, Current_Vehicle_1__c, CAC_Lead_Status__c ,Dealer_Lead_Status__c ,Lead_Desired_Service__c,Current_Vehicle_2__c,Trade_In_Vehicle__c, Purchased_Vehicle__c From Lead__c Where Id =: currentRecordId  AND MD__c = :usr.Market__c];
             leadType = lead_Vehicles.Lead_Type__c;
             system.debug('lead_Vehicles1:' +lead_Vehicles.Lead_Desired_Service__c);  
              if((lead_Vehicles.CAC_Lead_Status__c == 'Purchased(Only Non BDC)' || lead_Vehicles.Dealer_Lead_Status__c == 'Purchased(Only Non BDC)') && lead_Vehicles.Purchased_Vehicle__c == null){
@@ -74,7 +87,7 @@ global with sharing class VehiclePickerController {
                                             lead_Vehicles.Current_Vehicle_1__c, lead_Vehicles.Current_Vehicle_2__c,lead_Vehicles.Trade_In_Vehicle__c,
                                             lead_Vehicles.Purchased_Vehicle__c
                                          };
-            leadOwnerVehiclesRelationships = [select Vehicle_Id__r.Id from Vehicle_Relationship__c where Contact__c  IN (Select Contact__c from Lead__c where Id =:currentRecordId)];           
+            leadOwnerVehiclesRelationships = [select Vehicle_Id__r.Id from Vehicle_Relationship__c where Contact__c  IN (Select Contact__c from Lead__c where Id =:currentRecordId AND MD__c = :usr.Market__c)];           
             System.debug('Lead Vehicle Relationships...' +leadOwnerVehiclesRelationships.size());
             for (Integer i=0; i < leadOwnerVehiclesRelationships.size(); i++){
                 System.debug('In the For :' +leadOwnerVehiclesRelationships[i]);
@@ -82,7 +95,7 @@ global with sharing class VehiclePickerController {
             }
             if(!vehicleIds.isEmpty()){
                 System.debug('Vehicle Ids' +vehicleIds);
-                leadOwnerVehicles = [Select Brand__c, Class__c, Model_Description__c, UsVIN__c From Vehicle__c Where Id IN :vehicleIds];
+                leadOwnerVehicles = [Select Brand__c, Class__c, Model_Description__c, UsVIN__c From Vehicle__c Where Id IN :vehicleIds AND MD__c = :usr.Market__c];
                 System.debug('Lead Owner vehicles...:' +leadOwnerVehicles);
                 System.debug('Each Lead Vehicle type...' +lead_Vehicles.Interested_Vehicle__c); 
             }
@@ -130,7 +143,7 @@ global with sharing class VehiclePickerController {
             system.debug('Lead Vehicle Ids :' +lead_VehicleIds);
             //Query all the Vehicle Fields
             if(!lead_VehicleIds.isEmpty()){
-                vehiclesForLead = [Select RecordTypeId, Brand__c, Class__c, Colour__c, Model_Description__c, NextMileage__c, Trim__c From Vehicle__c Where Id IN :lead_VehicleIds];
+                vehiclesForLead = [Select RecordTypeId, Brand__c, Class__c, Colour__c, Model_Description__c, NextMileage__c, Trim__c From Vehicle__c Where Id IN :lead_VehicleIds AND MD__c = :usr.Market__c];
                 System.debug('All Vehicle Ids for Leads...' +vehiclesForLead);
                 for (Vehicle__c vehicles : vehiclesForLead){
                     System.debug('Entered Loop...');
@@ -191,12 +204,12 @@ global with sharing class VehiclePickerController {
             List<Map<String, Set<String>>> brand_class_model = new List<Map<String, Set<String>>>();
             Set<String> tempSet = new Set<String>();
             UtilConstant utilConst = new UtilConstant();
-            
+            system.debug('usr.Market__c '+ usr.Market__c);
             /*Query Car Model Records filter by status*/
             if(status_type.equalsIgnoreCase('None')){
-                carModels = [SELECT Brand__c,Name,Series__c,Colour__c,Model__c  FROM Car_Model__c];
+                carModels = [SELECT Brand__c,Name,Series__c,Colour__c,Model__c  FROM Car_Model__c Where MD__c = :usr.Market__c];
             }else{
-                carModels = [SELECT Brand__c,Name,Series__c,Colour__c,Model__c  FROM Car_Model__c Where Status__c =:status_type];
+                carModels = [SELECT Brand__c,Name,Series__c,Colour__c,Model__c  FROM Car_Model__c Where Status__c =:status_type AND MD__c = :usr.Market__c];
             }
             
             System.debug('New @Shrinivas Car Models:' +carModels);
@@ -215,7 +228,7 @@ global with sharing class VehiclePickerController {
                 }else{
                     tempSet.add(cm.Name);
                 }
-                 if(cm.Colour__c !=null & cm.Colour__c != ''){
+                 if(cm.Colour__c !=null && cm.Colour__c != ''){
                      List<string> tempLst = cm.Colour__c.split('\\|');
                      set<string> tempSetColors = new set<string>();
                       tempSetColors.addAll(tempLst);
@@ -390,11 +403,11 @@ global with sharing class VehiclePickerController {
         Set<Id> allVehicleIds = new Set<Id>();
         
         if ((vehicle_type.equalsIgnoreCase(utilConst.INTERESTED_VEHICLE) ||vehicle_type.equalsIgnoreCase(utilConst.PURCHASED_VEHICLE))){
-            vehicle = [Select Brand__c, Class__c, Model__c from Vehicle__c Where UsVIN__c =:vin_number];
+            vehicle = [Select Brand__c, Class__c, Model__c from Vehicle__c Where UsVIN__c =:vin_number AND MD__c = :usr.Market__c];
             system.debug('Vehicle for If' +vehicle);
         }
         else{
-            Lead__c leadAcc = [Select Contact__c from Lead__c where Id =: searchAttributes.get('RecordId')];
+            Lead__c leadAcc = [Select Contact__c from Lead__c where Id =: searchAttributes.get('RecordId') AND MD__c = :usr.Market__c];
             system.debug('Lead Contact...' +leadAcc);
             leadVehicleRelationships = [SELECT Vehicle_ID__c FROM Vehicle_Relationship__c WHERE Contact__c =:leadAcc.Contact__c ORDER BY CreatedDate ASC];
             system.debug('Lead Vehicle Relationships...' +leadVehicleRelationships);
@@ -409,7 +422,7 @@ global with sharing class VehiclePickerController {
             //Search for Self Registered:
             Id selfRegisteredRec_TypeId = UtilRecordType.getRecordTypeIdByName('Vehicle__c',utilConst.SELF_REGISTERED);
             system.debug('Self Registered Rec Id :' +selfRegisteredRec_TypeId);
-            selfRegisteredVehicles = [Select Id from Vehicle__c where Related_contact__c =:leadAcc.Contact__c AND RecordTypeId =:selfRegisteredRec_TypeId ORDER BY CreatedDate ASC];
+            selfRegisteredVehicles = [Select Id from Vehicle__c where Related_contact__c =:leadAcc.Contact__c AND RecordTypeId =:selfRegisteredRec_TypeId AND MD__c = :usr.Market__c ORDER BY CreatedDate ASC];
             system.debug('Self Registered Vehicles :' +selfRegisteredVehicles);
             
             if (!selfRegisteredVehicles.isEmpty()){
@@ -420,11 +433,11 @@ global with sharing class VehiclePickerController {
                 system.debug('Default Vehicle Ids...' +defaultVehicleIds);
             }
             if (vin_number.equalsIgnoreCase('')){
-                vehicle = [Select Brand__c, Class__c, Model__c from Vehicle__c Where Id IN :defaultVehicleIds];
+                vehicle = [Select Brand__c, Class__c, Model__c from Vehicle__c Where Id IN :defaultVehicleIds AND MD__c = :usr.Market__c];
                 system.debug('Default Vehicle Records...' +vehicle);
             }
             else{
-                vehicle = [Select Brand__c, Class__c, Model__c from Vehicle__c Where Id IN :allVehicleIds AND UsVIN__c =:vin_number];
+                vehicle = [Select Brand__c, Class__c, Model__c from Vehicle__c Where Id IN :allVehicleIds AND UsVIN__c =:vin_number AND MD__c = :usr.Market__c];
             }                 
             system.debug('Vehicle for else' +vehicle); 
         }
