SFDCAU-1172,SFDCAU-1182,SFDCAU-1166,SFDCAU-1173,SFDCAU-1168,SFDCAU-1095 and validation for dulicate gate keeper

--- a/src/main/metadata-au/classes/ContactHelper.cls
+++ b/src/main/metadata-au/classes/ContactHelper.cls
@@ -75,41 +75,47 @@ public class ContactHelper {
          
     }
     
-         public static void validateduplicategatekeeper(List<Contact> New_Contact_List)
+    public static void validateduplicategatekeeper(List<Contact> New_Contact_List)
     {
         
                 
             Set<Id> AccIdSet = new Set<Id>(); 
-            for (Contact con: New_Contact_List){
+            for (Contact con: New_Contact_List)
+            {
                 AccIdSet.add ( con.accountId);
                    
-                }
+            }
             Map<id,Account> AccountMap= new  Map<id,Account>([SELECT id,(SELECT id, Dealer_Lead_Gate_Keeper__c,Sub_BusinessUnit__c,Business_Unit__c FROM Contacts WHERE Dealer_Lead_Gate_Keeper__c=true) FROM Account WHERE id IN : AccIdSet ]);
            
            for (Contact con: New_Contact_List)
            {
-                   if (con.Dealer_Lead_Gate_Keeper__c == true){
-                        Id AccId = con.accountId;
+               if (con.Dealer_Lead_Gate_Keeper__c == true)
+               {
+                   Id AccId = con.accountId;
                    Account acct= AccountMap.get(AccId);
-                   for (Contact con1: acct.contacts){
-                       if ( con1.id != con.id){
-                           Set<String> Con_business_unit_set= new set<String>(con.Business_Unit__c.split(';'));
-                           Set<String> Con1_business_unit_set= new set<String>(con1.Business_Unit__c.split(';'));
-                           for(String businessunit: Con_business_unit_set){
-                               if(Con1_business_unit_set.Contains(businessunit)){
-                                   con.adderror('Only one user per business unit can be assigned as "Dealer Lead Administrator"');                                 
-                                   
+                   for (Contact con1: acct.contacts)
+                   {
+                       if ( con1.id != con.id)
+                       {
+                           List<String> Con_business_unit_set= new List<String>(con.Business_Unit__c.split(';'));
+                           List<String> Con1_business_unit_set= new List<String>(con1.Business_Unit__c.split(';'));
+                           system.debug('Con_business_unit_set>>>' + Con_business_unit_set);
+                           system.debug('Con_business_unit_set>>>' + Con1_business_unit_set);
+                           for(Integer i=0 ;i< Con_business_unit_set.size() ; i++)
+                           {
+                               for(Integer j=0; j< Con1_business_unit_set.size(); j++)
+                               {
+                                   if(Con_business_unit_set[i].equals(Con1_business_unit_set[j]))
+                                   {                                   
+                                       con.adderror('Only one user per business unit can be assigned as "Dealer Lead Administrator"');                                                                    
+                                   }
                                }
                            }
-                         
-                        }
-                    }
+                       }
+                   }
                }
                   
-           }
-                
-                
-                
+           }                                                
     }
     public static void ValidateManager(List<Contact> contacts) {
         
