Case sharing rules

--- a/src/main/metadata/classes/CaseTriggerHandlerJP.cls
+++ b/src/main/metadata/classes/CaseTriggerHandlerJP.cls
@@ -17,24 +17,24 @@ public class CaseTriggerHandlerJP
     } 
         system.debug('Entered handler...JP handler');
         system.debug('Trigger IsDelete...' +trigger.isDelete);
-        CaseHelperJP caseHelperJP = new CaseHelperJP();
+        CaseHelperJP caseHelperJPd = new CaseHelperJP();
         if (trigger.isBefore){  
             if (trigger.isInsert)
-                caseHelperJP.updateCaseDeadline(trigger.new);
+                caseHelperJPd.updateCaseDeadline(trigger.new);
             if (trigger.isUpdate){
-                caseHelperJP.calculateComplaintAmount(trigger.new,trigger.oldMap);
-                caseHelperJP.updateCaseDeadline(trigger.new,trigger.oldMap); 
+                caseHelperJPd.calculateComplaintAmount(trigger.new,trigger.oldMap);
+                caseHelperJPd.updateCaseDeadline(trigger.new,trigger.oldMap); 
                    
                 }      
         }else if (trigger.isAfter){
             if (trigger.isDelete){
                system.debug('Entered delete condition...');
-               caseHelperJP.calculateComplaintAmount(trigger.old);
+               caseHelperJPd.calculateComplaintAmount(trigger.old);
             }else if (trigger.isInsert){
-               caseHelperJP.calculateComplaintAmount(trigger.new); 
+               caseHelperJPd.calculateComplaintAmount(trigger.new); 
             }else if (trigger.isUpdate){
-            caseHelperJP.updateCase(trigger.new);
-               caseHelperJP.calculateComplaintAmount(trigger.new);
+            caseHelperJPd.updateCase(trigger.new);
+               caseHelperJPd.calculateComplaintAmount(trigger.new);
                  
             }
         }
